--- a/portfolio.html
+++ b/portfolio.html
@@ -129,9 +129,9 @@ $(document).ready(function() {
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-primary">
 			            	<h4>Legislature Election Map</h4>
 			            	<!-- <p style="color:#b8860b"><i class="glyphicon glyphicon-certificate"></i> Winner of the 2015 CAGIS Best Interactive Mapping Application.</p> -->
-			            	<p>Final 2012 results. Prototype for 2016 election map - built with Mapbox GL, using custom built <a href="https://github.com/Ccantey/LCC-Minimal-UI-NYT" target="_blank">LCC-Minimal-UI-NYT template</a>.</p>
-			            	 <a href="http://www.gis.leg.mn/iMaps/elections/2012/" target="blank">
-			            	    <img id="crime" src="assets/thumbnails/interactive/election2012.jpg" class="img-responsive" alt="Responsive image">
+			            	<p>Final 2016 Minnestoa election results. Built with Mapbox GL, using custom built <a href="https://github.com/Ccantey/LCC-Minimal-UI-NYT" target="_blank">LCC-Minimal-UI-NYT template</a>.</p>
+			            	 <a href="http://www.gis.leg.mn/iMaps/elections/2016/all/" target="blank">
+			            	    <img id="crime" src="assets/thumbnails/interactive/election2016.jpg" class="img-responsive" alt="Responsive image">
 			            	</a>
 			            	 <p style="margin-top:10px;font-style:italic"><i class="glyphicon glyphicon-star"></i> Fully responsive application. Test across any browser or device size.</p>
 
