--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@ $(document).ready(function() {
 				<div class="col-md-8">
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-success">
 			            	<h4>Who Represents Me?</h4>
-			            	<p>Minnesota Legislative district finder mapping application with geocoding and mobile geolocation capability. An open-source app built with PostGIS, Leaflet, and MapServer.</p>
+			            	<p>Minnesota Legislative district finder mapping application with geocoding and mobile geolocation capability. The best resource for MN citizens to find their legislators. In the app's first year it received nearly 2 million pageviews, 3:00 session duration, and a 35% bounce rate, nearly the same number of pageviews as the previous app in the last 3 years combined, with twice the duration and more than half the bounce. It is an open-source app built with PostGIS, Leaflet, and MapServer.</p>
 							
 			            	 <a href="http://www.gis.leg.mn/OpenLayers/districts/" target="blank">
 			            	     <img id="crime" src="assets/thumbnails/interactive/districtFinder.jpg" class="img-responsive" alt="Responsive image">
