--- a/about.html
+++ b/about.html
@@ -355,6 +355,7 @@
 		<br><br>
 		 <h2>Activities and Achievements</h2>
 		  <ul>
+            <li>Presenter: State Agency GIS Collaboration. | <a href="http://www.gis.leg.mn/iMaps/brownbag/#/" target="_blank">Web Mapping at the Legislature</a></li>
 		        <li>Minnesota Senate Resolution honoring achievement in cartography</li>
 		        <li>1st Place: Interactive map | <small>2015 Cartography & Geographic Information Society (CAGIS)</small></li>
 		        <li>Presenter: 2015 Wisconsin Land Information Assoc. | <a href="links/WLIA Presentation/index.html" target="_blank">Migrating your ArcGIS JS app to AMD</a></li>
