--- a/links/sandy/index.html
+++ b/links/sandy/index.html
@@ -193,7 +193,7 @@
 		<script src="js/async.js"></script>
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	    <script src="js/app.js"></script>
+	    <!-- <script src="js/app.js"></script> -->
 
 		<script src="js/queue.min.js" ></script>
 		<script src="js/d3.js"></script>
