--- a/portfolio.html
+++ b/portfolio.html
@@ -163,7 +163,7 @@ $(document).ready(function() {
 			            	<h4>Who Represents Me?</h4>
 			            	<p>Minnesota Legislative district finder mapping application with geocoding and mobile geolocation capability. The best resource for MN citizens to find their legislators. In the app's first year it received nearly 2 million pageviews, 3:00 session duration, and a 35% bounce rate, nearly the same number of pageviews as the previous app in the last 3 years combined, with twice the duration and more than half the bounce. It is an open-source app built with PostGIS, Leaflet, and MapServer.</p>
 							
-			            	 <a href="http://www.gis.leg.mn/OpenLayers/districts/" target="blank">
+			            	 <a href="https://www.gis.lcc.mn.gov/iMaps/districts/" target="blank">
 			            	     <img id="crime" src="assets/thumbnails/interactive/districtFinder.jpg" class="img-responsive" alt="Responsive image">
 			            	</a>
 							 <p style="margin-top:10px;font-style:italic"><i class="glyphicon glyphicon-star"></i> Fully responsive website. Test across any browser or device size.</p>
@@ -180,7 +180,7 @@ $(document).ready(function() {
 			            	<h4>Who Represents Me? </h4>
 			            	<p style="color:#b8860b"><i class="glyphicon glyphicon-asterisk"></i> Experimental - Mapbox GL</p>
 			            	<p>Minnesota Legislative district finder mapping application with geocoding and mobile geolocation capability. An open-source app built with PostGIS and Mapbox GL.</p>
-			            	 <a href="https://www.gis.leg.mn/iMaps/districts-webGL/" target="blank">
+			            	 <a href="https://www.gis.lcc.mn.gov/iMaps/districts/" target="blank">
 			            	     <img id="crime" src="assets/thumbnails/interactive/webgl.jpg" class="img-responsive" alt="Responsive image">
 			            	 </a>
 			            	 <p style="margin-top:10px;font-style:italic"><i class="glyphicon glyphicon-star"></i> Fully responsive application. Test across any browser or device size.</p>
